--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active=${ENVIRONMENT}
+server.port=8082
+spring.application.name=simple-bank-worker
 
 # Database
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost:5432}/${DB_NAME}
