--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.1.3.RELEASE</version>
 	</parent>
 
-	<groupId>com.simplebankworker</groupId>
-	<artifactId>simplebankworker</artifactId>
-	<version>0.0.1</version>
-	<name>Simple Bank Worker</name>
-	<description>A Simple Bank Project</description>
+	<groupId>com.transactiontransferworker</groupId>
+	<artifactId>transactiontransferworker</artifactId>
+	<version>0.0.2</version>
+	<name>Transaction Transfer Worker</name>
+	<description>Transaction Transfer Worker</description>
 
 	<properties>
 		<java.version>11</java.version>
