--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -1,3 +1,9 @@
+# Database
+DB_NAME=simplebankapi
 spring.datasource.username=${POSTGRES_USERNAME_DEV}
 spring.datasource.password=${POSTGRES_PASSWORD_DEV}
 spring.jpa.hibernate.ddl-auto=update
+
+# Jwt Token
+jwt.security.secret=${JWT_SECRET}
+jwt.security.expiration=86400000
