--- a/src/main/resources/config/application-local.properties
+++ b/src/main/resources/config/application-local.properties
@@ -1,4 +1,5 @@
 # Database
+DB_NAME=simplebankapi
 spring.datasource.username=simplebankapi
 spring.datasource.password=simplebankapiuser123
 spring.jpa.hibernate.ddl-auto=update
@@ -6,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Flyway Migrations
 spring.flyway.locations=classpath:db/migration
 
-DB_NAME=simplebankapi
+# Jwt Token
+jwt.security.secret=
+jwt.security.expiration=86400000
