--- a/src/main/resources/config/application-local.properties
+++ b/src/main/resources/config/application-local.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.flyway.locations=classpath:db/migration
 
 # Jwt Token
-jwt.security.secret=
+jwt.security.secret=7061756C6F313233
 jwt.security.expiration=86400000
