feat: first steps on documentation

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -10,3 +10,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # FeignClient
 gateway.url=https://run.mocky.io
+
+# Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packages-to-scan=com.transactiontransferworker
+springdoc.paths-to-match=/v1/**
+
+swagger.config.title=Transaction Transfer Worker
+swagger.config.description=Serviço de transferência de valores.
