--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<java.version>11</java.version>
 		<postgres.version>42.5.1</postgres.version>
 		<jwt.version>4.2.0</jwt.version>
+		<springdoc.version>1.6.14</springdoc.version>
 	</properties>
 
 	<dependencies>
@@ -103,6 +104,12 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>${jwt.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 	</dependencies>
